Edited the Title

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-dialog/0.6.2/js/ngDialog.min.js"></script>
-         <title>Rogers API Mocking</title>
+         <title>API Mocking</title>
         <link rel="stylesheet" href="stylesheets/style.css">
     </head>
    
