--- a/public/views/searchPage.html
+++ b/public/views/searchPage.html
@@ -11,10 +11,16 @@
             <option value="">Select a Project</option>
         </select>
             </div>
+            <div class="col-xs-12" ng-if="vm.addNew">
+            <div class="col-xs-3 pull-left"><h5>Project Name</h5></div>
+            <div class="col-xs-offset-1 col-xs-3"><h5>IP Address</h5></div>
+            <br><br>
+            </div>
+            
+            <input type="text" class="col-xs-3 pull-left input-style" ng-if="vm.addNew" ng-model="vm.projectName">
+            <input type="text" class="col-xs-3 col-xs-offset-1 input-style" ng-if="vm.addNew" ng-model="vm.ipAddress">
         
-            <input type="text" class="col-xs-offset-1 styled-select pull-left" ng-if="vm.addNew" ng-model="vm.projectName">
-        
-         <button class="col-xs-offset-1 col-xs-4 btn btn-rogers margin-100" ng-click="vm.addNew = !vm.addNew;vm.projectSelected='';!vm.projectName || vm.saveProject()" ng-disabled="!vm.projectName && vm.addNew"><span ng-if="vm.addNew">Save</span><span ng-if="!vm.addNew">Add Project</span></button>
+         <button class="col-xs-offset-1 col-xs-3 btn btn-rogers" ng-class="{'margin-100':!vm.addNew,'col-xs-4':!vm.addNew,'col-xs-3':vm.addNew}"ng-click="vm.addNew = !vm.addNew;vm.projectSelected='';vm.projectName.length>0 && vm.ipAddress.length>0 && vm.saveProject()" ng-disabled="(vm.projectName.length == 0 || vm.ipAddress.length==0) && vm.addNew"><span ng-if="vm.addNew">Save</span><span ng-if="!vm.addNew">Add Project</span></button>
             
         </div>
     <div class="col-xs-12 overflow-div" ng-if="vm.list.length>0 && vm.projectSelected">
