Commited the changes for dynamic IP mapping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,7 +45,7 @@ a {
         display: block;
      }
 
-.btn-rogers{
+.btn-red{
   background-color:rgb(218, 41, 28);
   border:1px solid rgb(218, 41, 28);
   border-top-left-radius: 15px;
