--- a/public/views/searchPage.html
+++ b/public/views/searchPage.html
@@ -21,7 +21,7 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th class="col-xs-6">S.No.</th>
+                    <th class="col-xs-6">No.</th>
                     <th class="col-xs-6">Service JSON</th>
                 </tr>
             </thead>
